--- a/WAP/index.html
+++ b/WAP/index.html
@@ -52,11 +52,11 @@
         <div class="banner"></div>
         <div class="nav-wrap">
             <ul class="nav-list">
-                <li class="nav-item nav-active">独家专访</li>
-                <li>现场报道</li>
-                <li>秀场直击</li>
-                <li>嘉宾助阵</li>
-                <li class="nav-active">十佳设计师</li>
+                <li class="nav-item">独家专访</li>
+                <li class="nav-item">现场报道</li>
+                <li class="nav-item">秀场直击</li>
+                <li class="nav-item">嘉宾助阵</li>
+                <li class="nav-item">十佳设计师</li>
             </ul>
         </div>
         <div id="part1">
@@ -124,7 +124,7 @@
                 </div>
                 <div class="back"></div>
                 <div class="next"></div>
-                <div class="pc-slide-ctr">
+                <div class="wap-slide-ctr">
                     <i></i>
                     <i></i>
                     <i></i>
@@ -185,7 +185,7 @@
                                 <div class="slide-div-item">
                                     <a href="#" target="_blank">
                                         <img
-                                            src="./img/100704890_1533197355333.png"
+                                            src="http://zzb.pcauto.com.cn/tools/img/?279x531/00f"
                                             alt=""
                                         />
                                     </a>
@@ -897,15 +897,76 @@
             </div>
         </div>
         <div id="part5">
-            <div class="big-pic">
-                <img src="./img/100649652_1533179822964.png" alt="">
+            <div class="slide-box">
+                <ul>
+                    <li class="slide-div-item">
+                        <div class="big-pic">
+                            <img src="https://img2.doubanio.com/view/photo/l/public/p2530712868.webp" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="small-pic">
+                                <div class="pic-border">
+                                </div>
+                                <img src="https://img1.doubanio.com/icon/ul48742879-60.jpg" alt="">                        
+                            </div>
+                            <div class="name">杨幂</div>
+                            <div class="desc">
+                                在干练的西服套装中融入彩色涂鸦元素，为干练的形象注入新鲜与俏皮感。高腰裤与V领衬衫相得益彰，展现颈部与腿部的完美比例。
+                            </div>
+                            <!-- <div class="jump-interview">
+                                <a href="javascript:;">点击查看专访</a>
+                            </div> -->
+                        </div>
+                    </li>
+                    <li class="slide-div-item">
+                        <div class="big-pic">
+                            <img src="https://img2.doubanio.com/view/photo/l/public/p2160568219.webp" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="small-pic">
+                                <div class="pic-border">
+                                </div>
+                                <img src="https://img2.doubanio.com/view/photo/l/public/p2560265212.webp" alt="">                        
+                            </div>
+                            <div class="name">周杰伦</div>
+                            <div class="desc">
+                                在干练的西服套装中融入彩色涂鸦元素，为干练的形象注入新鲜与俏皮感。高腰裤与V领衬衫相得益彰，展现颈部与腿部的完美比例。
+                            </div>
+                            <!-- <div class="jump-interview">
+                                <a href="javascript:;">点击查看专访</a>
+                            </div> -->
+                        </div>
+                    </li>
+                    <li class="slide-div-item">
+                        <div class="big-pic">
+                            <img src="http://zzb.pcauto.com.cn/tools/img/?1000x1000/000/fff/PCgroup/50" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="small-pic">
+                                <div class="pic-border">
+                                </div>
+                                <img src="http://zzb.pcauto.com.cn/tools/img/?1000x300/000/fff/PCgroup/50" alt="">                        
+                            </div>
+                            <div class="name">test</div>
+                            <div class="desc">
+                                在干练的西服套装中融入彩色涂鸦元素，为干练的形象注入新鲜与俏皮感。高腰裤与V领衬衫相得益彰，展现颈部与腿部的完美比例。
+                            </div>
+                            <!-- <div class="jump-interview">
+                                <a href="javascript:;">点击查看专访</a>
+                            </div> -->
+                        </div>
+                    </li>
+                </ul>
+                <div class="back"></div>
+                <div class="next"></div>
             </div>
-            <div class="info">
-                <div class="small-pic">
-                    <img src="http://zzb.pcauto.com.cn/tools/img/?218x219/05a/fff/PCgroup/50" alt="">
-                </div>
+            <div class="wap-slide-ctr">
+                <i></i>
+                <i></i>
+                <i></i>
             </div>
         </div>
+        <div id="team"></div>
     </div>
 
 
