--- a/WAP/index.html
+++ b/WAP/index.html
@@ -52,7 +52,7 @@
         <div class="banner"></div>
         <div class="nav-wrap">
             <ul class="nav-list">
-                <li class="nav-item">独家专访</li>
+                <li class="nav-item nav-active">独家专访</li>
                 <li class="nav-item">现场报道</li>
                 <li class="nav-item">秀场直击</li>
                 <li class="nav-item">嘉宾助阵</li>
