fix:导航栏背景溢出

--- a/WAP/index.html
+++ b/WAP/index.html
@@ -50,14 +50,14 @@
 
     <div class="wap-container">
         <div class="banner"></div>
-        <h1 style="color: #fff;">v1.4</h1>
+        <h1 style="color: #fff;">v1.5</h1>
         <div class="nav-wrap">
             <ul class="nav-list">
-                <li class="nav-item nav-active">独家专访</li>
-                <li class="nav-item">现场报道</li>
-                <li class="nav-item">秀场直击</li>
-                <li class="nav-item">嘉宾助阵</li>
-                <li class="nav-item">十佳设计师</li>
+                <li class="nav-item nav-active"><a href="javascript:;">独家专访</a></li>
+                <li class="nav-item"><a href="javascript:;">现场报道</a></li>
+                <li class="nav-item"><a href="javascript:;">秀场直击</a></li>
+                <li class="nav-item"><a href="javascript:;">嘉宾助阵</a></li>
+                <li class="nav-item"><a href="javascript:;">十佳设计师</a></li>
             </ul>
         </div>
         <div id="part1">
