--- a/WAP/index.html
+++ b/WAP/index.html
@@ -273,59 +273,194 @@
                     <ul class="swiper-wrapper">
                         <li class="slide-div-item swiper-slide">
                             <div class="big-pic">
-                                <img src="https://img2.doubanio.com/view/photo/l/public/p2530712868.webp" alt="">
+                                <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img1.jpg" alt="">
                             </div>
                             <div class="info">
                                 <div class="small-pic">
                                     <div class="pic-border">
                                     </div>
-                                    <img src="https://img1.doubanio.com/icon/ul48742879-60.jpg" alt="">                        
+                                    <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img1-1.jpg" alt="">                        
                                 </div>
-                                <div class="name">杨幂</div>
+                                <div class="name">张荣</div>
                                 <div class="desc">
-                                    在干练的西服套装中融入彩色涂鸦元素，为干练的形象注入新鲜与俏皮感。
+                                    KAISERIN铠琪品牌总监
                                 </div>
-                                <!-- <div class="jump-interview">
-                                    <a href="javascript:;">点击查看专访</a>
-                                </div> -->
                             </div>
                         </li>
                         <li class="slide-div-item swiper-slide">
                             <div class="big-pic">
-                                <img src="https://img2.doubanio.com/view/photo/l/public/p2160568219.webp" alt="">
+                                <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img2.jpg" alt="">
                             </div>
                             <div class="info">
                                 <div class="small-pic">
                                     <div class="pic-border">
                                     </div>
-                                    <img src="https://img2.doubanio.com/view/photo/l/public/p2560265212.webp" alt="">                        
+                                    <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img2-1.jpg" alt="">                        
                                 </div>
-                                <div class="name">周杰伦</div>
+                                <div class="name">张译文</div>
                                 <div class="desc">
-                                    在干练的西服套装中融入彩色涂鸦元素，为干练的形象注入新鲜与俏皮感。
+                                    YIIWEN异闻设计总监
                                 </div>
-                                <!-- <div class="jump-interview">
-                                    <a href="javascript:;">点击查看专访</a>
-                                </div> -->
                             </div>
                         </li>
                         <li class="slide-div-item swiper-slide">
                             <div class="big-pic">
-                                <img src="http://zzb.pcauto.com.cn/tools/img/?1000x1000/000/fff/PCgroup/50" alt="">
+                                <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img3.jpg" alt="">
                             </div>
                             <div class="info">
                                 <div class="small-pic">
                                     <div class="pic-border">
                                     </div>
-                                    <img src="http://zzb.pcauto.com.cn/tools/img/?1000x300/000/fff/PCgroup/50" alt="">                        
+                                    <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img3-1.jpg" alt="">                        
                                 </div>
-                                <div class="name">test</div>
+                                <div class="name">许文浩</div>
                                 <div class="desc">
-                                    在干练的西服套装中融入彩色涂鸦元素，为干练的形象注入新鲜与俏皮感。高腰裤与V领衬衫相得益彰，展现颈部与腿部的完美比例。
+                                    决意联合设计总监
                                 </div>
-                                <!-- <div class="jump-interview">
-                                    <a href="javascript:;">点击查看专访</a>
-                                </div> -->
+                            </div>
+                        </li>
+                        <li class="slide-div-item swiper-slide">
+                            <div class="big-pic">
+                                <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img4.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="small-pic">
+                                    <div class="pic-border">
+                                    </div>
+                                    <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img4-1.jpg" alt="">                        
+                                </div>
+                                <div class="name">李欣</div>
+                                <div class="desc">
+                                    CHAOZHUZHANG潮主张品牌主理人
+                                </div>
+                            </div>
+                        </li>
+                        <li class="slide-div-item swiper-slide">
+                            <div class="big-pic">
+                                <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img5.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="small-pic">
+                                    <div class="pic-border">
+                                    </div>
+                                    <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img5-1.jpg" alt="">                        
+                                </div>
+                                <div class="name">刘佳鑫</div>
+                                <div class="desc">
+                                    MEXG品牌主理人
+                                </div>
+                            </div>
+                        </li>
+                        <li class="slide-div-item swiper-slide">
+                            <div class="big-pic">
+                                <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img6.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="small-pic">
+                                    <div class="pic-border">
+                                    </div>
+                                    <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img6-1.jpg" alt="">                        
+                                </div>
+                                <div class="name">黄国东</div>
+                                <div class="desc">
+                                    JEANSWEST真维斯商品开发部总监
+                                </div>
+                            </div>
+                        </li>
+                        <li class="slide-div-item swiper-slide">
+                            <div class="big-pic">
+                                <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img7.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="small-pic">
+                                    <div class="pic-border">
+                                    </div>
+                                    <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img7-1.jpg" alt="">                        
+                                </div>
+                                <div class="name">黄永豪</div>
+                                <div class="desc">
+                                    靛蓝纹学品牌创始人
+                                </div>
+                            </div>
+                        </li>
+                        <li class="slide-div-item swiper-slide">
+                            <div class="big-pic">
+                                <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img8.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="small-pic">
+                                    <div class="pic-border">
+                                    </div>
+                                    <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img8-1.jpg" alt="">                        
+                                </div>
+                                <div class="name">杜韵淇</div>
+                                <div class="desc">
+                                    Songdaoqi轻奢礼服品牌创始人
+                                </div>
+                            </div>
+                        </li>
+                        <li class="slide-div-item swiper-slide">
+                            <div class="big-pic">
+                                <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img9.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="small-pic">
+                                    <div class="pic-border">
+                                    </div>
+                                    <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img9-1.jpg" alt="">                        
+                                </div>
+                                <div class="name">蒋淑倩</div>
+                                <div class="desc">
+                                    其用设计总监
+                                </div>
+                            </div>
+                        </li>
+                        <li class="slide-div-item swiper-slide">
+                            <div class="big-pic">
+                                <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img10.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="small-pic">
+                                    <div class="pic-border">
+                                    </div>
+                                    <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img10-1.jpg" alt="">                        
+                                </div>
+                                <div class="name">曾发隆</div>
+                                <div class="desc">
+                                    Ewie设计总监
+                                </div>
+                            </div>
+                        </li>
+                        <li class="slide-div-item swiper-slide">
+                            <div class="big-pic">
+                                <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img11.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="small-pic">
+                                    <div class="pic-border">
+                                    </div>
+                                    <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img11-1.jpg" alt="">                        
+                                </div>
+                                <div class="name">胡丽华</div>
+                                <div class="desc">
+                                    女装高级设计师
+                                </div>
+                            </div>
+                        </li>
+                        <li class="slide-div-item swiper-slide">
+                            <div class="big-pic">
+                                <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img12.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="small-pic">
+                                    <div class="pic-border">
+                                    </div>
+                                    <img src="//www1.pclady.com.cn/gz20230913/fashion/images/img12-1.jpg" alt="">                        
+                                </div>
+                                <div class="name">关淑敏</div>
+                                <div class="desc">
+                                    LAFAVEUR芸想品牌创始人
+                                </div>
                             </div>
                         </li>
                     </ul>
